# EmotioNN

./: .gitignore  README.md  pyproject.toml
emotionn/: dataset.py  maintorch.py  torch_attention.py
